Make sure not to delete the wrong directory.  Bug 116376, patch by Andrew Schultz <ajschult@mindspring.com>, r=bsmedberg, sr=dveditz